<resources>
    <string name="app_name">ePass Verify</string>

    <string name="permission_camera_rationale">Require Camera permission for this feature.</string>
    <string name="ok">OK</string>
    <string name="low_storage_error">Storage is low, Please delete some file and try again.</string>
    <string name="no_camera_permission">Camera Permission is required to use this feature. Click OK to give Camera Permission.</string>
    <string name="scan_qr_code_to_verify_the_pass">Scan QR code to verify the pass</string>
    <string name="enter_qr_code">Enter QR Code</string>
    <string name="enter_qr_code_manually">Enter QR code manually</string>
    <string name="name">Name:</string>
    <string name="age">Dob:</string>
    <string name="aadhar_id">Aadhar ID:</string>
    <string name="done">Done</string>
    <string name="qr_code_verified_successfully">QR code verified successfully!</string>
    <string name="something_went_wrong_try_again">Something went wrong! Try again</string>
    <string name="oops_seems_like_an_expired_code">Oops! Seems like an expired code!</string>
    <string name="oops_rejected_code">Oops! Your code has been rejected!</string>
    <string name="unable_to_connect_server_try_again">Unable to connect server</string>
    <string name="permission_required">Permission Required</string>
    <string name="unable_to_open_scanner">Unable to Open Scanner</string>
    <string name="your_phone_does_not_support_scan_feature">Your phone does not support scan feature.</string>
    <string name="processing">Processing</string>
    <string name="try_again">Try Again</string>
    <string name="request_failed">Request Failed</string>
    <string name="please_enter_6_digit_token_number">Please enter 6 digit valid token number.</string>
    <string name="scan_passes_to_verify_commuters_during_the_covid_pandemic">Scan passes to verify commuters during the COVID pandemic</string>
    <string name="get_started">Get Started</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="you_will_receive_otp">You’ll receive an OTP to verify your account</string>
    <string name="get_otp">Get OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="verify">Verify</string>
    <string name="didn_t_get_the_otp">Didn\'t get the OTP?</string>
    <string name="resend_sms">Resend SMS</string>
    <string name="no_internet_connection_found">No internet Connection found.</string>
    <string name="please_enter_valid_otp">Please enter valid OTP</string>
    <string name="enter_the_otp_sent_to_number">Enter the OTP sent to %s</string>
    <string name="please_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="please_enter_valid_country_code">Please enter valid country code</string>
    <string name="india_dial_code">+91</string>
    <string name="not_now">Not now</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="invalid_qr_code">Invalid QR Code</string>
    <string name="digit_qr_code">Enter QR Code</string>
    <string name="logout">Logout</string>
    <string name="otp_resent">OTP Resent</string>
    <string name="incorrect_qr_code_entered">Incorrect QR code entered</string>


</resources>
