<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="utils"
            type="com.anumati.approver.utils.CommonConfig" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back_icon" />


        <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_25dp"
            android:text="@string/verify_otp"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/phone_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_25dp"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_label"
            tools:text="Enter the OTP sent to XXXXXXX890" />

        <EditText
            android:id="@+id/otp_editText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_60dp"
            android:layout_weight="1"
            android:imeOptions="actionNext"
            android:hint="@string/enter_otp"
            android:inputType="number"
            android:layout_margin="@dimen/margin_16dp"
            android:maxLength="@{utils.OTP_LENGTH}"
            android:singleLine="true"
            android:textColorHint="@color/hint_color"
            app:layout_constraintTop_toBottomOf="@id/phone_description" />

        <TextView
            android:id="@+id/otp_resend_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:text="@string/didn_t_get_the_otp"
            android:textColor="@color/grey_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/resend_otp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:text="@string/resend_sms"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/verify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:background="@drawable/button_rectangular"
            android:paddingLeft="@dimen/margin_40dp"
            android:paddingTop="@dimen/margin_15dp"
            android:paddingRight="@dimen/margin_40dp"
            android:paddingBottom="@dimen/margin_15dp"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>