<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="utils"
            type="com.anumati.approver.utils.CommonConfig" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back_icon" />


        <TextView
            android:id="@+id/qr_code_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_25dp"
            android:text="@string/enter_qr_code"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <EditText
            android:id="@+id/qr_code_edittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_60dp"
            android:layout_margin="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_32dp"
            android:imeOptions="actionDone"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
            android:hint="@string/digit_qr_code"
            android:inputType="text"
            android:maxLength="@{utils.MANUAL_QR_CODE_LENGTH}"
            android:textColorHint="@color/hint_color"
            app:layout_constraintTop_toBottomOf="@id/qr_code_label" />

        <Button
            android:id="@+id/verify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_120dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:background="@drawable/button_rectangular"
            android:text="@string/verify"
            android:paddingTop="@dimen/margin_15dp"
            android:paddingBottom="@dimen/margin_15dp"
            android:paddingLeft="@dimen/margin_60dp"
            android:paddingRight="@dimen/margin_60dp"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/qr_code_edittext" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>